[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Character/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/ComboTimerUI/ComboTimerUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/BonusText/BonusText.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Background/Background.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/Game.gd" type="Script" id=5]

[node name="Game" type="Node2D" groups=[
"game",
]]
process_mode = 1
script = ExtResource( 5 )
ComboScene = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 4 )]
process_mode = 1
position = Vector2( 360, 640 )

[node name="ComboTimer" parent="." instance=ExtResource( 2 )]
position = Vector2( 360, 640 )

[node name="Character" parent="." instance=ExtResource( 1 )]
position = Vector2( 360, 640 )

[connection signal="no_time_left" from="ComboTimer" to="." method="_on_ComboTimer_no_time_left"]
[connection signal="click" from="Character" to="." method="_on_Character_click"]
